This file lists all the major user-visible changes to nullmailer.
-------------------------------------------------------------------------------
Changes in version 1.00RC8

- Made permissions on queued files more strict.

- Handle the "-bs" flag in the sendmail wrapper by dieing when we see it.

Note:  If no further bugs are found, this will become the official
version 1.00 release.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.00RC7

- Fixed typo in smtp protocol module that caused HELO to be sent without
  a hostname.

- Added a one-shot mode to nullmailer-send, triggered by setting the
  pausetime to zero.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.00RC6

- Protocol modules now report all failure and success messages.

- Removed the whole gethostname/getdomainname mess and replaced it with
  code to read the hostname from the "me" control file, and the default
  domain name from the "defaultdomain" control file.

- Fixed a bug that would cause lines starting with a period to have that
  period stripped when it was sent via SMTP.

- Added some missing includes to fix compilation failures in various
  sources.

- Fixed a bug in the setenv function in sendmail.cc.

NOTE!  Make sure to set up the new "me" control file before using this
version.  The RPM install does this automatically.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.00RC5

- Fixed getdomainname prototype in lib/hostname.cc.